リファクタリング

--- a/PointCloudApp/PointCloudApp.vcxproj
+++ b/PointCloudApp/PointCloudApp.vcxproj
@@ -172,16 +172,17 @@
     <ClCompile Include="KDTree.cpp" />
     <ClCompile Include="KMeansAlgorithm.cpp" />
     <ClCompile Include="PointCloud.cpp" />
-    <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="Primitives.cpp" />
     <ClCompile Include="PointCloudApp.cpp" />
     <ClCompile Include="GLBuffer.cpp" />
-    <ClCompile Include="IPrimitive.cpp" />
+    <ClCompile Include="Primitive.cpp" />
     <ClCompile Include="IShader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="PerspectiveCamera.cpp" />
+    <ClCompile Include="RenderCamera.cpp" />
     <ClCompile Include="PointCloudNode.cpp" />
+    <ClCompile Include="PrimitiveNode.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="RenderNode.cpp" />
     <ClCompile Include="ShaderUtility.cpp" />
@@ -205,16 +206,17 @@
     <ClInclude Include="KDTree.h" />
     <ClInclude Include="KMeansAlgorithm.h" />
     <ClInclude Include="PointCloud.h" />
-    <ClInclude Include="Primitive.h" />
+    <ClInclude Include="Primitives.h" />
     <ClInclude Include="PointCloudApp.h" />
     <ClInclude Include="GLBuffer.h" />
-    <ClInclude Include="IPrimitive.h" />
+    <ClInclude Include="Primitive.h" />
     <ClInclude Include="IShader.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="MouseInput.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="PerspectiveCamera.h" />
+    <ClInclude Include="RenderCamera.h" />
     <ClInclude Include="PointCloudNode.h" />
+    <ClInclude Include="PrimitiveNode.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="RenderNode.h" />
