--- a/PointCloudApp/PointCloudApp.vcxproj
+++ b/PointCloudApp/PointCloudApp.vcxproj
@@ -180,7 +180,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="RenderCamera.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="PointCloudNode.cpp" />
     <ClCompile Include="PrimitiveNode.cpp" />
     <ClCompile Include="Profiler.cpp" />
@@ -214,7 +214,7 @@
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="MouseInput.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="RenderCamera.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="PointCloudNode.h" />
     <ClInclude Include="PrimitiveNode.h" />
     <ClInclude Include="Profiler.h" />
