--- a/PointCloudApp/PointCloudApp.vcxproj
+++ b/PointCloudApp/PointCloudApp.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -75,12 +75,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files\PCL 1.13.1\include\pcl-1.13;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <VcpkgUseStatic>false</VcpkgUseStatic>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -166,9 +170,11 @@
     <ClCompile Include="..\extlibs\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\extlibs\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\extlibs\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="AlphaShape.cpp" />
     <ClCompile Include="BDB.cpp" />
     <ClCompile Include="CameraController.cpp" />
     <ClCompile Include="FileUtility.cpp" />
+    <ClCompile Include="Harris3D.cpp" />
     <ClCompile Include="KDTree.cpp" />
     <ClCompile Include="KDTreeNanoFlann.cpp" />
     <ClCompile Include="KMeansAlgorithm.cpp" />
@@ -202,6 +208,8 @@
     <ClInclude Include="..\extlibs\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\extlibs\imgui\imstb_textedit.h" />
     <ClInclude Include="..\extlibs\imgui\imstb_truetype.h" />
+    <ClInclude Include="AlphaShape.h" />
+    <ClInclude Include="Harris3D.h" />
     <ClInclude Include="IAlgorithm.h" />
     <ClInclude Include="BDB.h" />
     <ClInclude Include="CameraController.h" />
