--- a/PointCloudApp/PointCloudApp.vcxproj
+++ b/PointCloudApp/PointCloudApp.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="FrameBuffer.cpp" />
     <ClCompile Include="GLFWApp.cpp" />
     <ClCompile Include="GLTFLoader.cpp" />
+    <ClCompile Include="GLTFSceneUpdater.cpp" />
     <ClCompile Include="GLTFShader.cpp" />
     <ClCompile Include="GLTFStruct.cpp" />
     <ClCompile Include="GLUtility.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="GLFWApp.h" />
     <ClInclude Include="GLTFLoader.h" />
+    <ClInclude Include="GLTFSceneUpdater.h" />
     <ClInclude Include="GLTFShader.h" />
     <ClInclude Include="GLTFStruct.h" />
     <ClInclude Include="GLTypes.h" />
