--- a/PointCloudApp/PointCloudApp.vcxproj.filters
+++ b/PointCloudApp/PointCloudApp.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClCompile Include="GLUtility.cpp">
       <Filter>ソース ファイル\GL</Filter>
     </ClCompile>
+    <ClCompile Include="GLTFSceneUpdater.cpp">
+      <Filter>ソース ファイル\Utility\GLTF</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraController.h">
@@ -351,6 +354,9 @@
     </ClInclude>
     <ClInclude Include="GLUtility.h">
       <Filter>ソース ファイル\GL</Filter>
+    </ClInclude>
+    <ClInclude Include="GLTFSceneUpdater.h">
+      <Filter>ソース ファイル\Utility\GLTF</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
