--- a/PointCloudApp/PointCloudApp.vcxproj.filters
+++ b/PointCloudApp/PointCloudApp.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClCompile Include="GLTFScene.cpp">
       <Filter>ソース ファイル\Utility\GLTF</Filter>
     </ClCompile>
+    <ClCompile Include="MeshShaderTest.cpp">
+      <Filter>ソース ファイル\App</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraController.h">
@@ -363,6 +366,9 @@
     </ClInclude>
     <ClInclude Include="GLTFScene.h">
       <Filter>ソース ファイル\Utility\GLTF</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshShaderTest.h">
+      <Filter>ソース ファイル\App</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
