--- a/PointCloudApp/PointCloudApp.vcxproj
+++ b/PointCloudApp/PointCloudApp.vcxproj
@@ -174,11 +174,15 @@
     <ClCompile Include="..\extlibs\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\extlibs\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\extlibs\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="..\extlibs\implot\implot.cpp" />
+    <ClCompile Include="..\extlibs\implot\implot_demo.cpp" />
+    <ClCompile Include="..\extlibs\implot\implot_items.cpp" />
     <ClCompile Include="AlphaShape.cpp" />
     <ClCompile Include="BDB.cpp" />
     <ClCompile Include="CameraController.cpp" />
     <ClCompile Include="ComputePointCloudApp.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
+    <ClCompile Include="GLAPIExt.cpp" />
     <ClCompile Include="GLFWApp.cpp" />
     <ClCompile Include="GLTFLoader.cpp" />
     <ClCompile Include="GLTFScene.cpp" />
@@ -186,6 +190,10 @@
     <ClCompile Include="GLTFShader.cpp" />
     <ClCompile Include="GLTFStruct.cpp" />
     <ClCompile Include="GLUtility.cpp" />
+    <ClCompile Include="HalfEdgeLoader.cpp" />
+    <ClCompile Include="HalfEdgeStruct.cpp" />
+    <ClCompile Include="HalfEdgeNode.cpp" />
+    <ClCompile Include="MeshletGenerator.cpp" />
     <ClCompile Include="MeshShaderTest.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="PointCloudComputeShader.cpp" />
@@ -227,9 +235,12 @@
     <ClInclude Include="..\extlibs\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\extlibs\imgui\imstb_textedit.h" />
     <ClInclude Include="..\extlibs\imgui\imstb_truetype.h" />
+    <ClInclude Include="..\extlibs\implot\implot.h" />
+    <ClInclude Include="..\extlibs\implot\implot_internal.h" />
     <ClInclude Include="AlphaShape.h" />
     <ClInclude Include="ComputePointCloudApp.h" />
     <ClInclude Include="FrameBuffer.h" />
+    <ClInclude Include="GLAPIExt.h" />
     <ClInclude Include="GLFWApp.h" />
     <ClInclude Include="GLTFLoader.h" />
     <ClInclude Include="GLTFScene.h" />
@@ -238,6 +249,10 @@
     <ClInclude Include="GLTFStruct.h" />
     <ClInclude Include="GLTypes.h" />
     <ClInclude Include="GLUtility.h" />
+    <ClInclude Include="HalfEdgeLoader.h" />
+    <ClInclude Include="HalfEdgeStruct.h" />
+    <ClInclude Include="HalfEdgeNode.h" />
+    <ClInclude Include="MeshletGenerator.h" />
     <ClInclude Include="MeshShaderTest.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="PointCloudComputeShader.h" />
