--- a/PointCloudApp/imgui.ini
+++ b/PointCloudApp/imgui.ini
@@ -1,5 +1,15 @@
 [Window][Debug##Default]
-Pos=5,16
-Size=262,201
+Pos=5,23
+Size=338,306
 Collapsed=0
+
+[Window][ImPlot Demo]
+Pos=660,168
+Size=863,902
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=648,20
+Size=550,680
+Collapsed=1
 
