--- a/PointCloudApp/PointCloudApp.vcxproj.filters
+++ b/PointCloudApp/PointCloudApp.vcxproj.filters
@@ -48,6 +48,12 @@
     <Filter Include="ソース ファイル\Utility\GLTF">
       <UniqueIdentifier>{d0dd84a3-36d7-42b5-adf4-dc124e8949ef}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Utility\HalfEdge">
+      <UniqueIdentifier>{a11932a0-6878-4f3f-adda-cbf2fb4a2877}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Utility\PointCloud">
+      <UniqueIdentifier>{2a44b236-d1b0-4470-9761-755616275d4a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -113,12 +119,6 @@
     <ClCompile Include="..\extlibs\imgui\backends\imgui_impl_glfw.cpp">
       <Filter>ソース ファイル\extlibs</Filter>
     </ClCompile>
-    <ClCompile Include="PointCloudNode.cpp">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClCompile>
-    <ClCompile Include="PointCloud.cpp">
-      <Filter>ソース ファイル\Primitive</Filter>
-    </ClCompile>
     <ClCompile Include="RenderNode.cpp">
       <Filter>ソース ファイル\Node</Filter>
     </ClCompile>
@@ -167,16 +167,10 @@
     <ClCompile Include="ComputeShaderSample.cpp">
       <Filter>ソース ファイル\GL\Shader\ComputeShader</Filter>
     </ClCompile>
-    <ClCompile Include="PointCloudComputeShader.cpp">
-      <Filter>ソース ファイル\GL\Shader</Filter>
-    </ClCompile>
     <ClCompile Include="FrameBuffer.cpp">
       <Filter>ソース ファイル\GL\Buffer</Filter>
     </ClCompile>
     <ClCompile Include="TextureLoader.cpp">
-      <Filter>ソース ファイル\Utility\Loader</Filter>
-    </ClCompile>
-    <ClCompile Include="PointCloudIO.cpp">
       <Filter>ソース ファイル\Utility\Loader</Filter>
     </ClCompile>
     <ClCompile Include="GLTFLoader.cpp">
@@ -184,9 +178,6 @@
     </ClCompile>
     <ClCompile Include="GLTFStruct.cpp">
       <Filter>ソース ファイル\Utility\GLTF</Filter>
-    </ClCompile>
-    <ClCompile Include="GLTFShader.cpp">
-      <Filter>ソース ファイル\GL\Shader</Filter>
     </ClCompile>
     <ClCompile Include="GLUtility.cpp">
       <Filter>ソース ファイル\GL</Filter>
@@ -199,6 +190,45 @@
     </ClCompile>
     <ClCompile Include="MeshShaderTest.cpp">
       <Filter>ソース ファイル\App</Filter>
+    </ClCompile>
+    <ClCompile Include="PointCloudComputeShader.cpp">
+      <Filter>ソース ファイル\GL\Shader\ComputeShader</Filter>
+    </ClCompile>
+    <ClCompile Include="GLAPIExt.cpp">
+      <Filter>ソース ファイル\GL</Filter>
+    </ClCompile>
+    <ClCompile Include="HalfEdgeStruct.cpp">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClCompile>
+    <ClCompile Include="GLTFShader.cpp">
+      <Filter>ソース ファイル\Utility\GLTF</Filter>
+    </ClCompile>
+    <ClCompile Include="HalfEdgeLoader.cpp">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClCompile>
+    <ClCompile Include="HalfEdgeNode.cpp">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClCompile>
+    <ClCompile Include="PointCloudIO.cpp">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClCompile>
+    <ClCompile Include="PointCloudNode.cpp">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClCompile>
+    <ClCompile Include="PointCloud.cpp">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshletGenerator.cpp">
+      <Filter>ソース ファイル\Algorithm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\extlibs\implot\implot.cpp">
+      <Filter>ソース ファイル\extlibs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\extlibs\implot\implot_demo.cpp">
+      <Filter>ソース ファイル\extlibs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\extlibs\implot\implot_items.cpp">
+      <Filter>ソース ファイル\extlibs</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -274,12 +304,6 @@
     <ClInclude Include="..\extlibs\imgui\backends\imgui_impl_glfw.h">
       <Filter>ソース ファイル\extlibs</Filter>
     </ClInclude>
-    <ClInclude Include="PointCloudNode.h">
-      <Filter>ソース ファイル\Node</Filter>
-    </ClInclude>
-    <ClInclude Include="PointCloud.h">
-      <Filter>ソース ファイル\Primitive</Filter>
-    </ClInclude>
     <ClInclude Include="RenderNode.h">
       <Filter>ソース ファイル\Node</Filter>
     </ClInclude>
@@ -346,17 +370,11 @@
     <ClInclude Include="TextureLoader.h">
       <Filter>ソース ファイル\Utility\Loader</Filter>
     </ClInclude>
-    <ClInclude Include="PointCloudIO.h">
-      <Filter>ソース ファイル\Utility\Loader</Filter>
-    </ClInclude>
     <ClInclude Include="GLTFLoader.h">
       <Filter>ソース ファイル\Utility\GLTF</Filter>
     </ClInclude>
     <ClInclude Include="GLTFStruct.h">
       <Filter>ソース ファイル\Utility\GLTF</Filter>
-    </ClInclude>
-    <ClInclude Include="GLTFShader.h">
-      <Filter>ソース ファイル\GL\Shader</Filter>
     </ClInclude>
     <ClInclude Include="GLUtility.h">
       <Filter>ソース ファイル\GL</Filter>
@@ -369,6 +387,39 @@
     </ClInclude>
     <ClInclude Include="MeshShaderTest.h">
       <Filter>ソース ファイル\App</Filter>
+    </ClInclude>
+    <ClInclude Include="GLAPIExt.h">
+      <Filter>ソース ファイル\GL</Filter>
+    </ClInclude>
+    <ClInclude Include="HalfEdgeStruct.h">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClInclude>
+    <ClInclude Include="GLTFShader.h">
+      <Filter>ソース ファイル\Utility\GLTF</Filter>
+    </ClInclude>
+    <ClInclude Include="HalfEdgeLoader.h">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClInclude>
+    <ClInclude Include="HalfEdgeNode.h">
+      <Filter>ソース ファイル\Utility\HalfEdge</Filter>
+    </ClInclude>
+    <ClInclude Include="PointCloudIO.h">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClInclude>
+    <ClInclude Include="PointCloudNode.h">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClInclude>
+    <ClInclude Include="PointCloud.h">
+      <Filter>ソース ファイル\Utility\PointCloud</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshletGenerator.h">
+      <Filter>ソース ファイル\Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="..\extlibs\implot\implot.h">
+      <Filter>ソース ファイル\extlibs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\extlibs\implot\implot_internal.h">
+      <Filter>ソース ファイル\extlibs</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
